--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -85,7 +85,7 @@
     </style>
 </head>
 <body>
-    <h1>Galeri Asmiyah 🎭</h1>
+    <h1>Galeri Anyoy 🎭</h1>
     <div id="camera-container">
         <div id="camera"></div>
         <label for="effect">Pilih Efek:</label>
